[package]
edition = '2021'
name = 'leetcode-solutions'
version = '0.1.0'

[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'add-two-numbers'
path = 'src/0002.add-two-numbers/solution.rs'

[dependencies]
anyhow = '1.0.71'
leetgo-rs = '0.2.1'
serde = '1.0.169'
serde_json = '1.0.100'
